# gentoo-overlay-bliss

./: README.md
metadata/: layout.conf  metadata.xml  repos.xml
profiles/: repo_name  use.desc
sys-kernel/bliss-initramfs/: Manifest  bliss-initramfs-9.5.0.ebuild  metadata.xml
sys-kernel/bliss-initramfs/bliss-initramfs-9.5.0/: .gitignore  LICENSE  README-MORE.md  README.md  USAGE.md  mkinitrd.py  pyproject.toml
sys-kernel/bliss-initramfs/bliss-initramfs-9.5.0/files/: default-settings.json  init
sys-kernel/bliss-initramfs/bliss-initramfs-9.5.0/pkg/hooks/: Base.py  Firmware.py  Hook.py  Modules.py  Zfs.py
sys-kernel/bliss-initramfs/bliss-initramfs-9.5.0/pkg/libs/: Core.py  Tools.py  Variables.py
sys-kernel/bliss-initramfs/files/: bliss-initramfs-9.5.0-settings-path.patch
