[tool.poetry]
name = "bliss-initramfs"
version = "9.5.0"
description = "Generates an initramfs image with all files and dependencies needed to boot your Gentoo Linux system installed on OpenZFS."
authors = ["Jonathan Vasquez <jon@xyinn.org>"]
license = "Simplified BSD License"
packages = [
    { include = "pkg" },
    { include = "mkinitrd.py" }
]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
beautysh = "^6.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
